landing page proofreading

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
 ---
 <header class="container-fluid hero-container">
     <div class="hero">
-        <h1 style="color:#EA4D1A;">Objects auditing and diff framework</h1>
+        <h1 style="color:#EA4D1A;">Object auditing and diff framework</h1>
 
         <p>Using <strong>JaVers</strong> you can forget about the troublesome data versioning</p>
 
@@ -42,7 +42,7 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
             <span>
                 <img src="img/icon_gears.svg" alt="easy configuration"/>
             </span>
-            <h4>easy<br/>configuration</h4>
+            <h4><a href="/documentation/configuration">easy<br/>configuration</a></h4>
         </div>
         <div class="col-xs-4 col-md-4">
             <span>
@@ -61,14 +61,14 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
                 <h2>Features</h2>
                 <h3>With version {{site.javers_current_version}} you can:</h3>
                 <ul>
-                    <li><p><a href="/documentation/diff-examples/">Compare</a> complex objects structures using <code>javers.compare()</code></p></li>
-                    <li><p><a href="/documentation/repository-examples/#commit-changes">Commit</a> changes done on your domain objects with a single
+                    <li><p><a href="/documentation/diff-examples/">Compare</a> complex object structures using <code>javers.compare()</code></p></li>
+                    <li><p><a href="/documentation/repository-examples/#commit-changes">Commit</a> changes performed on your domain objects with a single
                         <code>javers.commit()</code> call</p></li>
                     <li><p>Browse detailed change history of given object in two forms &mdash;
                         <a href="/documentation/repository-examples/#read-changes-history">diffs</a> and
                         <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a></p></li>
-                    <li><p>Persist objects change history in <code>MongoDB</code></p></li>
-                    <li><p>Track every change on object fields as well as relations changes</p></li>
+                    <li><p>Persist object change history in <code>MongoDB</code></p></li>
+                    <li><p>Track every change off object fields as well as relations changes</p></li>
                     <li><p>Use unified object GlobalId to easily identify your Entities and ValueObjects</p>
                     </li>
                 </ul>
@@ -76,7 +76,7 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
             <div id="demo-app" class="col-md-6">
                 <h2>Demo app</h2>
 
-                <h3>Test it out with few seconds</h3>
+                <h3>Test it out in a few seconds</h3>
 
                 <p>
                     Check out our cool Demo webapp based on <code>spring-boot</code> Launch it from command
@@ -88,10 +88,10 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
                 <p class="console">
                     git clone https://github.com/javers/javers-demo.git
                     <br/>
-                    gradlew bootRun
+                    ./gradlew bootRun
                 </p>
 
-                <p><strong>In few seconds, app should be up & ready at <code>http://localhost:8080</code></strong></p>
+                <p>In a few seconds, app should be up & ready at <code>http://localhost:8080</code></p>
             </div>
         </div>
     </div>
@@ -101,17 +101,18 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Release plan</h2>
+                <h2>Backlog</h2>
                 <ul id="releases">
-                    <li><strong>v. 1.0</strong> — production-ready release with stable API</li>
                     <li>v. 1.1 &nbsp; — PostgreSQL, MySql and H2 support</li>
                     <li>v. 1.2 — Oracle support</li>
-                    <li>see <a href="documentation/features/#release-notes">release notes</a>
                 </ul>
 
+                <h2>Release notes</h2>
+                See JaVers <a href="documentation/features/#release-notes">release notes</a>
+
                 <h2>Report an issue</h2>
-                <p>Found a bug? Documentation is unclear?<br/>
-                    <a href="https://github.com/javers/javers/issues/">Report an issue</a></p>
+                Found a bug? Documentation is unclear?<br/>
+                <a href="https://github.com/javers/javers/issues/">Report an issue</a></p>
             </div>
             <div id="team" class="col-md-4">
                 <h2>Project team</h2>
