--- a/javadoc_1.0.0/org/javers/core/metamodel/clazz/package-summary.html
+++ b/javadoc_1.0.0/org/javers/core/metamodel/clazz/package-summary.html
@@ -127,7 +127,9 @@
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/metamodel/clazz/EntityDefinition.html" title="class in org.javers.core.metamodel.clazz">EntityDefinition</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Recipe for <a href="../../../../../org/javers/core/metamodel/type/EntityType.html" title="class in org.javers.core.metamodel.type"><code>EntityType</code></a></div>
+</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/metamodel/clazz/JaversAnnotationsNamesSpace.html" title="class in org.javers.core.metamodel.clazz">JaversAnnotationsNamesSpace</a></td>
@@ -165,7 +167,9 @@
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../../../org/javers/core/metamodel/clazz/ValueObjectDefinition.html" title="class in org.javers.core.metamodel.clazz">ValueObjectDefinition</a></td>
-<td class="colLast">&nbsp;</td>
+<td class="colLast">
+<div class="block">Recipe for <a href="../../../../../org/javers/core/metamodel/type/ValueObjectType.html" title="class in org.javers.core.metamodel.type"><code>ValueObjectType</code></a></div>
+</td>
 </tr>
 </tbody>
 </table>
