about sql repository

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: main
-title: JaVers — Lightweight Java Objects Auditing And Diff Framework
-descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
+title: Java Object auditing and diff framework
+description: Using JaVers you can forget about the troublesome data versioning. Let the changes in your data be managed by JaVers.
 ---
 <header class="container-fluid hero-container">
     <div class="hero">
@@ -79,10 +79,10 @@ descritpion: JaVers — Lightweight Java Objects Auditing And Diff Framework
                 <h3>Test it out in a few seconds</h3>
 
                 <p>
-                    Check out our cool Demo webapp based on <code>spring-boot</code> Launch it from command
+                    Check out our cool Demo webapp based on <code>spring-boot</code>. Launch it from command
                     line using provided
                     <code>Gradle</code> wrapper.
-                    Requiremets: <code>MongoDB</code> (running mongod at localhost) and <code>Java8</code>
+                    Requiremets: <code>MongoDB</code> (running mongod at localhost) and Java8.
                 </p>
 
                 <p class="console">
