--- a/index.html
+++ b/index.html
@@ -61,15 +61,22 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                 <h2>Features</h2>
                 <h3>With version {{site.javers_current_version}} you can:</h3>
                 <ul>
-                    <li><p><a href="/documentation/diff-examples/">Compare</a> complex object structures using <code>javers.compare()</code></p></li>
+                    <li><p><a href="/documentation/diff-examples/">Compare</a> complex object structures using <code>javers.compare()</code>.</p></li>
                     <li><p><a href="/documentation/repository-examples/#commit-changes">Commit</a> changes performed on your domain objects with a single
-                        <code>javers.commit()</code> call</p></li>
+                        <code>javers.commit()</code> call.</p></li>
+                    <li><p>Take advantage of the <a href="/documentation/spring-integration/#auto-audit-aspect">auto-audit annotation</a>
+                         for Spring Data Repositories.</p></li>
                     <li><p>Browse detailed change history of given object in two forms &mdash;
                         <a href="/documentation/repository-examples/#read-changes-history">diffs</a> and
-                        <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a></p></li>
-                    <li><p>Persist object change history in <code>MongoDB</code></p></li>
-                    <li><p>Track every change off object fields as well as relations changes</p></li>
-                    <li><p>Use unified object GlobalId to easily identify your Entities and ValueObjects</p>
+                        <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a>.</p></li>
+                    <li><p>
+                        <a href="/documentation/repository-configuration/#choose-javers-repository">
+                        Persist</a> data change history in <b>MongoDB</b>, <b>PostgreSQL</b> or <b>MySQL</b>.</p></li>
+                    <li><p>Track every change off object fields as well as relations changes.</p></li>
+                    <li><p>Use unified object GlobalId to easily identify your
+                        <a href="/documentation/domain-configuration/#entity">Entities</a>
+                        and
+                        <a href="/documentation/domain-configuration/#value-object">Value Objects</a>.</p>
                     </li>
                 </ul>
             </div>
@@ -103,8 +110,8 @@ description: Using JaVers you can forget about the troublesome data versioning. 
             <div class="col-md-4">
                 <h2>Backlog</h2>
                 <ul id="releases">
-                    <li>v. 1.1 &nbsp; — PostgreSQL, MySql and H2 support</li>
-                    <li>v. 1.2 — Oracle support</li>
+                    <li>v. 1.2 — Ms SQL support</li>
+                    <li>v. 1.3 — Oracle support</li>
                 </ul>
 
                 <h2>Release notes</h2>
