v. 1.2 — JaVers Query Language

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ description: Using JaVers you can forget about the troublesome data versioning. 
             <div class="col-md-4">
                 <h2>Backlog</h2>
                 <ul id="releases">
-                    <li>v. 1.2 — Ms SQL support</li>
-                    <li>v. 1.3 — Oracle support</li>
+                    <li>v. 1.2 — JaVers Query Language</li>
+                    <li>v. 1.3 — Ms SQL & Oracle support</li>
                 </ul>
 
                 <h2>Release notes</h2>
