--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: main
-title: Java Object auditing and diff framework
+title: JaVers &mdash; Object auditing and diff framework for Java
 description: Using JaVers you can forget about the troublesome data versioning. Let the changes in your data be managed by JaVers.
 ---
 <header class="container-fluid hero-container">
     <div class="hero">
-        <h1 style="color:#EA4D1A;">Object auditing and diff framework</h1>
+        <h1 style="color:#EA4D1A;">Object auditing and diff framework for Java</h1>
 
         <p>Using <strong>JaVers</strong> you can forget about the troublesome data versioning</p>
 
