--- a/index.html
+++ b/index.html
@@ -66,18 +66,17 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                         <code>javers.commit()</code> call.</p></li>
                     <li><p>Take advantage of the <a href="/documentation/spring-integration/#auto-audit-aspect">auto-audit annotation</a>
                          for Spring Data Repositories.</p></li>
-                    <li><p>Browse detailed change history of given object in two forms &mdash;
-                        <a href="/documentation/repository-examples/#read-changes-history">diffs</a> and
-                        <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a>.</p></li>
-                    <li><p>
-                        <a href="/documentation/repository-configuration/#choose-javers-repository">
+
+                    <li><p><a href="/documentation/repository-configuration/#choose-javers-repository">
                         Persist</a> data change history in <b>MongoDB</b>, <b>PostgreSQL</b> or <b>MySQL</b>.</p></li>
                     <li><p>Track every change off object fields as well as relations changes.</p></li>
-                    <li><p>Use unified object GlobalId to easily identify your
-                        <a href="/documentation/domain-configuration/#entity">Entities</a>
-                        and
-                        <a href="/documentation/domain-configuration/#value-object">Value Objects</a>.</p>
-                    </li>
+
+                    <li><p>Use <a href="/documentation/repository-examples/#jql">Javers Query Language</a>
+                        to easily query for changes of a given class, object or property.</p></li>
+
+                    <li><p>Browse data change history in two views &mdash;
+                        <a href="/documentation/repository-examples/#read-changes-history">diffs</a> and
+                        <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a>.</p></li>
                 </ul>
             </div>
             <div id="demo-app" class="col-md-6">
