--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                 </ul>
 
                 <h2>Release notes</h2>
-                See JaVers <a href="documentation/features/#release-notes">release notes</a>
+                See <a href="documentation/features/#release-notes">release notes</a>
+
+                <h2>Gitter chat</h2>
+                Join our <a href="https://gitter.im/javers/javers">chat room</a> at Gitter
 
                 <h2>Report an issue</h2>
                 Found a bug? Documentation is unclear?<br/>
