--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                         Persist</a> data change history in <b>MongoDB</b>, <b>PostgreSQL</b> or <b>MySQL</b>.</p></li>
                     <li><p>Track every change off object fields as well as relations changes.</p></li>
 
-                    <li><p>Use <a href="/documentation/repository-examples/#jql">Javers Query Language</a>
+                    <li><p>Use <a href="/documentation/jql-examples/">Javers Query Language</a>
                         to easily query for changes of a given class, object or property.</p></li>
 
                     <li><p>Browse data change history in two views &mdash;
