--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@ description: Using JaVers you can forget about the troublesome data versioning. 
             <div class="col-md-4">
                 <h2>Backlog</h2>
                 <ul id="releases">
-                    <li>v. 1.2 — JaVers Query Language</li>
-                    <li>v. 1.3 — Ms SQL & Oracle support</li>
+                    <li>v. 1.3 — Ms SQL & Oracle support, update MongoDB diver from 2.1 to 3.0. To be released in June</li>
                 </ul>
 
                 <h2>Release notes</h2>
