--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ description: Using JaVers you can forget about the troublesome data versioning. 
             <div class="col-md-4">
                 <h2>Backlog</h2>
                 <ul id="releases">
-                    <li>v. 1.3 — Ms SQL & Oracle support, MongoDB diver update to 3.0. To be released in June</li>
+                    <li>v. 1.3 — Ms SQL & Oracle support. To be released in June</li>
                 </ul>
 
                 <h2>Release notes</h2>
