Oracle and MS SQL

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                          for Spring Data Repositories.</p></li>
 
                     <li><p><a href="/documentation/repository-configuration/#choose-javers-repository">
-                        Persist</a> data change history in <b>MongoDB</b>, <b>PostgreSQL</b> or <b>MySQL</b>.</p></li>
+                        Persist</a> data change history in <b>MongoDB</b>, <b>PostgreSQL</b>, <b>MySQL</b>, <b>Oracle</b> or
+                        <b>Microsoft SQL Server</b>.</p></li>
                     <li><p>Track every change off object fields as well as relations changes.</p></li>
 
                     <li><p>Use <a href="/documentation/jql-examples/">Javers Query Language</a>
@@ -109,7 +110,7 @@ description: Using JaVers you can forget about the troublesome data versioning. 
             <div class="col-md-4">
                 <h2>Backlog</h2>
                 <ul id="releases">
-                    <li>v. 1.3 — Ms SQL & Oracle support. To be released in June</li>
+                    <li>TBA</li>
                 </ul>
 
                 <h2>Release notes</h2>
