--- a/index.html
+++ b/index.html
@@ -126,12 +126,14 @@ description: Using JaVers you can forget about the troublesome data versioning. 
             <div id="team" class="col-md-4">
                 <h2>Project team</h2>
                 <ul class="list-unstyled">
-                    <li>
+                    <li style="margin-bottom: 12px">
                         <img alt="Bartosz Walacik Gravatar"
                              src="http://www.gravatar.com/avatar/09d370c8f5e6c5caf365a31f1f2128fc" class="profile-img"/>
                         <strong>Bartosz Walacik</strong>&nbsp;
                         <small>owner</small>
                         <a href="https://twitter.com/BartoszWalacik" title="Bartosz Walaciak">@BartoszWalacik</a>
+                        <br/>
+                        <a href="mailto:bartek@javers.org" target="_top">bartek@javers.org</a>
                     </li>
                     <li>
                         <img alt="Paweł Szymczyk Gravatar"
