--- a/index.html
+++ b/index.html
@@ -116,9 +116,6 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                 <h2>Release notes</h2>
                 See <a href="documentation/features/#release-notes">release notes</a>
 
-                <h2>Gitter chat</h2>
-                Join our <a href="https://gitter.im/javers/javers">chat room</a> at Gitter
-
                 <h2>Report an issue</h2>
                 Found a bug? Documentation is unclear?<br/>
                 <a href="https://github.com/javers/javers/issues/">Report an issue</a></p>
@@ -132,8 +129,6 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                         <strong>Bartosz Walacik</strong>&nbsp;
                         <small>owner</small>
                         <a href="https://twitter.com/BartoszWalacik" title="Bartosz Walaciak">@BartoszWalacik</a>
-                        <br/>
-                        <a href="mailto:bartek@javers.org" target="_top">bartek@javers.org</a>
                     </li>
                     <li>
                         <img alt="Paweł Szymczyk Gravatar"
@@ -150,6 +145,11 @@ description: Using JaVers you can forget about the troublesome data versioning. 
                         <a href="https://twitter.com/bartoszgalek" title="Bartosz Gałek">@bartoszgalek</a>
                     </li>
                 </ul>
+
+                <h2>Contact</h2>
+                Join our <a href="https://gitter.im/javers/javers">chat room</a> at Gitter
+                <br/>
+                or <a href="mailto:bartek@javers.org" target="_top">mail us</a>
             </div>
             <div class="col-md-4">
                 <br/>
