--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Backlog</h2>
-                <ul id="releases">
-                    <li>TBA</li>
-                </ul>
+                <h2>Upcoming releases</h2>
+                See our plans for
+                <a href="https://github.com/javers/javers/milestones">upcoming releases</a>
 
                 <h2>Release notes</h2>
                 See <a href="documentation/features/#release-notes">release notes</a>
