new questions policy

--- a/index.html
+++ b/index.html
@@ -110,16 +110,22 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <h2>Upcoming releases</h2>
-                See our plans for
-                <a href="https://github.com/javers/javers/milestones">upcoming releases</a>
-
                 <h2>Release notes</h2>
                 See <a href="documentation/features/#release-notes">release notes</a>
 
-                <h2>Report an issue</h2>
-                Found a bug? Documentation is unclear?<br/>
-                <a href="https://github.com/javers/javers/issues/">Report an issue</a></p>
+                <h2>Troubleshooting</h2>
+                <ul>
+                <li>
+                    Have a question? Ask JaVers Community on <a href="http://stackoverflow.com/">stackoverflow.com</a>
+                </li>
+                <li>
+                    Found a bug? <a href="https://github.com/javers/javers/issues/">Report an issue</a>
+                </li>
+                <li>
+                    Missing feature? Contribute a <a href="https://github.com/javers/javers/pulls/">pull request</a>
+                </li>
+                </ul>
+
             </div>
             <div id="team" class="col-md-4">
                 <h2>Project team</h2>
