github API calling

--- a/index.html
+++ b/index.html
@@ -169,3 +169,9 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
         </div>
     </div>
 </section>
+
+<script src="js/github.js"></script>
+<script src="js/github-client.js"></script>
+
+<div id="github-team"></div>
+<div id="github-contributors"></div>
