--- a/index.html
+++ b/index.html
@@ -173,5 +173,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
 <script src="js/github.js"></script>
 <script src="js/github-client.js"></script>
 
-<div id="github-team"></div>
-<div id="github-contributors"></div>
+<h3>Core team</h3>
+<ul id="github-team"></ul>
+<h3>Committers</h3>
+<ul id="github-contributors"></ul>
