--- a/index.html
+++ b/index.html
@@ -175,5 +175,5 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
 
 <h3>Core team</h3>
 <ul id="github-team"></ul>
-<h3>Committers</h3>
+<h3>Contributors</h3>
 <ul id="github-contributors"></ul>
