--- a/index.html
+++ b/index.html
@@ -19,66 +19,83 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
     <div class="container white-container">
         <div class="row">
             <div class="feature col-md-4 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon octicon octicon-git-compare"></span>
-                </div>
-                <h2>Compare</h2>
+                <a href="/documentation/diff-examples/">
+                    <div class="icon-container">
+                        <span class="icon octicon octicon-git-compare"></span>
+                    </div>
+                    <h2>Compare</h2>
+                </a>
                 Compare complex object structures
             </div>
+
             <div class="feature col-md-4 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon octicon octicon-git-pull-request"></span>
-                </div>
-                <h2>Commit</h2>
-                <a href="/documentation/repository-examples/#commit-changes">Commit</a> changes performed on your domain objects
+                <a href="/documentation/repository-examples/">
+                    <div class="icon-container">
+                        <span class="icon octicon octicon-git-pull-request"></span>
+                    </div>
+                    <h2>Commit</h2>
+                </a>
+                Commit changes performed on your domain objects
             </div>
             <div class="feature col-md-4 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon fa fa-at"></span>
-                </div>
-                <h2>Auto-audit annotations</h2>
-                Take advantage of the <a href="/documentation/spring-integration/#auto-audit-aspect">auto-audit annotation</a> for Spring Data Repositories.
+                <a href="/documentation/spring-integration/#auto-audit-aspect">
+                    <div class="icon-container">
+                        <span class="icon fa fa-at"></span>
+                    </div>
+                    <h2>Auto-audit annotations</h2>
+                </a>
+                Take advantage of the auto-audit annotation for Spring Data Repositories
             </div>
             <div class="feature col-md-4 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon octicon octicon-repo"></span>
-                </div>
-                <h2>Persist</h2>
-                Persist</a> data change history in <b>MongoDB</b>, <b>PostgreSQL</b>, <b>MySQL</b>, <b>Oracle</b> or
-                <b>Microsoft SQL Server</b>.
+                <a href="/documentation/repository-configuration/">
+                    <div class="icon-container">
+                        <span class="icon octicon octicon-repo"></span>
+                    </div>
+                    <h2>Persist</h2>
+                </a>
+                Persist data change history in <b>MongoDB</b>, <b>PostgreSQL</b>, <b>MySQL</b>, <b>Oracle</b> or
+                <b>Microsoft SQL Server</b>
             </div>
             <div class="feature col-md-4 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon octicon octicon-diff"></span>
-                </div>
-                <h2>Track changes</h2>
-                Track every change of object fields as well as relations changes.
+                <a href="/documentation/diff-examples/#compare-graphs">
+                    <div class="icon-container">
+                        <span class="icon octicon octicon-diff"></span>
+                    </div>
+                    <h2>Track changes</h2>
+                </a>
+                Track every change of object fields as well as relations changes
             </div>
             <div class="feature col-md-4 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon octicon octicon-book"></span>
-                </div>
-                <h2>Javers Query Language</h2>
-                Use <a href="/documentation/jql-examples/">Javers Query Language</a>
-                to easily query for changes of a given class, object or property.
+                <a href="/documentation/jql-examples/">
+                    <div class="icon-container">
+                        <span class="icon octicon octicon-book"></span>
+                    </div>
+                    <h2>Javers Query Language</h2>
+                </a>
+                Use Javers Query Language
+                to easily query for changes of a given class, object or property
             </div>
         </div>
         <div class="row">
             <div class="feature col-md-6 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon octicon octicon-mirror"></span>
-                </div>
-                <h2>Two views</h2>
+                <a href="/documentation/repository-examples/#read-snapshots-history">
+                    <div class="icon-container">
+                        <span class="icon octicon octicon-mirror"></span>
+                    </div>
+                    <h2>Two views</h2>
+                </a>
                 Browse data change history in two views &mdash;
                 <a href="/documentation/repository-examples/#read-changes-history">diffs</a> and
-                <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a>.
+                <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a>
             </div>
             <div class="feature col-md-6 col-sm-6">
-                <div class="icon-container">
-                    <span class="icon fa fa-rocket"></span>
-                </div>
-                <h2>One, two, three, go!</h2>
-                Easy <a href="/documentation/configuration">configuration</a>
+                <a href="documentation/getting-started/">
+                    <div class="icon-container">
+                        <span class="icon fa fa-rocket"></span>
+                    </div>
+                    <h2>One, two, three, go!</h2>
+                </a>
+                <a href="documentation/getting-started/">Quick start</a> and easy <a href="/documentation/configuration">configuration</a>
             </div>
         </div>
     </div>
@@ -121,7 +138,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-stack-overflow"></span>
                     </div>
-                    <h2><strong>Ask a question</strong> at<br> Stack Overflow</h2>
+                    <h2><strong>Ask</strong> a question at<br> StackOverflow</h2>
                     <h3>#javers</h3>
                 </div>
             </a>
