--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     </div>
                     <h2>One, two, three, go!</h2>
                 </a>
-                <a href="documentation/getting-started/">Quick start</a> and easy <a href="/documentation/configuration">configuration</a>
+                <a href="documentation/getting-started/">Quick start</a>
+                and easy <a href="/documentation/domain-configuration">configuration</a>
             </div>
         </div>
     </div>
