--- a/index.html
+++ b/index.html
@@ -107,40 +107,53 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
 <section class="grey-container">
     <div class="container">
         <div class="row">
-            <a href="https://github.com/javers/javers">
-                <div class="social col-md-3 col-sm-6">
-                    <div class="icon-container">
-                        <span class="icon fa fa-github"></span>
-                    </div>
-                    <h2><strong>Contribute</strong> at<br> Github</h2>
-                    <h3>javers/javers</h3>
-                </div>
-            </a>
-            <a href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar">
-                <div class="social col-md-3 col-sm-6">
-                    <div class="icon-container">
-                        <span class="icon fa fa-cloud-download"></span>
-                    </div>
-                    <h2><strong>Download</strong> from<br>Maven</h2>
-                    <h3>org.javers</h3>
-                </div>
-            </a>
-            <a href="https://gitter.im/javers/javers">
-                <div class="social col-md-3 col-sm-6">
-                    <div class="icon-container">
-                        <span class="icon fa fa-comments"></span>
-                    </div>
-                    <h2><strong>Chat</strong> with us at<br> Gitter</h2>
-                    <h3>javers/javers</h3>
-                </div>
-            </a>
+
             <a href="http://stackoverflow.com/questions/tagged/javers?sort=newest">
-                <div class="social col-md-3 col-sm-6">
+                <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-stack-overflow"></span>
                     </div>
                     <h2><strong>Ask</strong> a question at<br> StackOverflow</h2>
-                    <h3>#javers</h3>
+                </div>
+            </a>
+            <a href="https://github.com/javers/javers">
+                <div class="social col-md-2 col-sm-6">
+                    <div class="icon-container">
+                        <span class="icon fa fa-github"></span>
+                    </div>
+                    <h2><strong>Contribute</strong> at<br> Github</h2>
+                </div>
+            </a>
+            <a href="https://github.com/javers/javers/issues">
+                <div class="social col-md-2 col-sm-6">
+                    <div class="icon-container">
+                        <span class="icon fa fa-bug"></span>
+                    </div>
+                    <h2>Report a <strong>Bug</strong> at<br> GitHub Issues</h2>
+                </div>
+            </a>
+            <a href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar">
+                <div class="social col-md-2 col-sm-6">
+                    <div class="icon-container">
+                        <span class="icon fa fa-cloud-download"></span>
+                    </div>
+                    <h2><strong>Download</strong> from<br>Maven Central</h2>
+                </div>
+            </a>
+            <a href="https://gitter.im/javers/javers">
+                <div class="social col-md-2 col-sm-6">
+                    <div class="icon-container">
+                        <span class="icon fa fa-comments"></span>
+                    </div>
+                    <h2><strong>Chat</strong> with us at<br> Gitter</h2>
+                </div>
+            </a>
+            <a href="https://twitter.com/javers_org">
+                <div class="social col-md-2 col-sm-6">
+                    <div class="icon-container">
+                        <span class="icon fa fa-twitter"></span>
+                    </div>
+                    <h2><strong>Follow</strong> us on<br>Twitter</h2>
                 </div>
             </a>
         </div>
