--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-cloud-download"></span>
                     </div>
-                    <h2><strong>Download</strong> from<br>Maven Central</h2>
+                    <h2><strong>Download</strong> from<br>The Central</h2>
                 </div>
             </a>
             <a href="https://gitter.im/javers/javers">
