--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-stack-overflow"></span>
                     </div>
-                    <h2><strong>Ask</strong> a question at<br> StackOverflow</h2>
+                    <h2>Ask a question at<br><span>StackOverflow</span></h2>
                 </div>
             </a>
             <a href="https://github.com/javers/javers">
@@ -121,7 +121,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-github"></span>
                     </div>
-                    <h2><strong>Contribute</strong> at<br> Github</h2>
+                    <h2>Contribute at<br><span>Github</span></h2>
                 </div>
             </a>
             <a href="https://github.com/javers/javers/issues">
@@ -129,7 +129,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-bug"></span>
                     </div>
-                    <h2>Report a <strong>Bug</strong> at<br> GitHub Issues</h2>
+                    <h2>Report a Bug at<br><span>GitHub Issues</span></h2>
                 </div>
             </a>
             <a href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar">
@@ -137,7 +137,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-cloud-download"></span>
                     </div>
-                    <h2><strong>Download</strong> from<br>The Central</h2>
+                    <h2>Download from<br><span>The Central</span></h2>
                 </div>
             </a>
             <a href="https://gitter.im/javers/javers">
@@ -145,7 +145,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-comments"></span>
                     </div>
-                    <h2><strong>Chat</strong> with us at<br> Gitter</h2>
+                    <h2>Chat with us at<br><span>Gitter</span></h2>
                 </div>
             </a>
             <a href="https://twitter.com/javers_org">
@@ -153,7 +153,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <div class="icon-container">
                         <span class="icon fa fa-twitter"></span>
                     </div>
-                    <h2><strong>Follow</strong> us on<br>Twitter</h2>
+                    <h2>Follow us on<br><span>Twitter</span></h2>
                 </div>
             </a>
         </div>
