--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@ title: JaVers &mdash; Object auditing and diff framework for Java
 description: Witth JaVers you can forget about troublesome data versioning. Let the changes in your data be managed by JaVers.
 ---
 <header class="container-fluid hero-container">
+    <p style="font-size: 1.2em; margin-left: 30px; margin-top:5px; color:red; text-align: center;" >
+        Check out JaVers latest Release Candidate
+        <a href="http://search.maven.org/#artifactdetails|org.javers|javers-core|1.4.0-RC1|jar" >
+            1.4.0-RC1
+        </a>
+        with @TypeName and support for domain classes refactoring!
+    </p>
+
     <div class="hero">
         <h1 style="color:#EA4D1A;">Object auditing and diff framework for Java</h1>
 
         <p>Using <strong>JaVers</strong> you can forget about the troublesome data versioning</p>
 
         <p>Let the changes in your data be managed by JaVers</p>
+
     </div>
 </header>
 
