--- a/javadoc_1.4.0/org/javers/core/JaversBuilder.html
+++ b/javadoc_1.4.0/org/javers/core/JaversBuilder.html
@@ -671,6 +671,10 @@ extends <a href="../../../org/javers/core/AbstractJaversBuilder.html" title="cla
 <h4>withMappingStyle</h4>
 <pre>public&nbsp;<a href="../../../org/javers/core/JaversBuilder.html" title="class in org.javers.core">JaversBuilder</a>&nbsp;withMappingStyle(<a href="../../../org/javers/core/MappingStyle.html" title="enum in org.javers.core">MappingStyle</a>&nbsp;mappingStyle)</pre>
 <div class="block">Default style is <a href="../../../org/javers/core/MappingStyle.html#FIELD"><code>MappingStyle.FIELD</code></a>.</div>
+<dl>
+<dt><span class="seeLabel">See Also:</span></dt>
+<dd><a href="http://javers.org/documentation/domain-configuration/#property-mapping-style">http://javers.org/documentation/domain-configuration/#property-mapping-style</a></dd>
+</dl>
 </li>
 </ul>
 <a name="withNewObjectsSnapshot-boolean-">
@@ -741,11 +745,11 @@ extends <a href="../../../org/javers/core/AbstractJaversBuilder.html" title="cla
 <div class="block">Choose between two algorithms for comparing list: ListCompareAlgorithm.SIMPLE
  or ListCompareAlgorithm.LEVENSHTEIN_DISTANCE.
  <br/><br/>
- Generally, we recommend using LEVENSHTEIN_DISTANCE, because it’s smarter.
+ Generally, we recommend using LEVENSHTEIN_DISTANCE, because it's smarter.
  Hoverer, it can be slow for long lists, so SIMPLE is enabled by default.
  <br/><br/>
 
- Refer to <a href="http://javers.org/documentation/diff-configuration/#list-algorithms">javers.org/documentation/diff-configuration/#list-algorithms</a>
+ Refer to <a href="http://javers.org/documentation/diff-configuration/#list-algorithms">http://javers.org/documentation/diff-configuration/#list-algorithms</a>
  for description of both algorithms</div>
 <dl>
 <dt><span class="paramLabel">Parameters:</span></dt>
