--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
             </div>
             <div class="col-md-4">
                 <br/>
-                <a class="twitter-timeline" href="https://twitter.com/BartoszWalacik"
-                   data-tweet-limit="3"
-                   data-link-color="#ea4d1a"
-                   data-widget-id="469928071974232064">Tweets by
-                    @BartoszWalacik</a>
+                <a class="twitter-timeline"
+                   href="https://twitter.com/javers_org"
+                   data-widget-id="469928071974232064"
+                   data-tweet-limit="4"
+                   data-link-color="#ea4d1a">Tweety użytkownika @javers_org </a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
         </div>
     </div>
