--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <ul id="github-team" class="list-unstyled"></ul>
                 <h2>Contributors</h2>
                     <ul id="github-contributors" class="list-unstyled"></ul>
+
+                <h2>Team Board</h2>
+                   See on our <a href="https://waffle.io/javers/javers">Kanban Board</a>
+                   what are working on
             </div>
             <div class="col-md-4">
                 <br/>
