--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
 <section class="grey-container">
     <div class="container">
         <div class="row">
-            <a href="https://github.com/javers/javers">
+            <a href="http://github.com/javers/javers#guidelines-for-contributors">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-github"></span>
@@ -116,7 +116,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <h2>Contribute at<br><span>Github</span></h2>
                 </div>
             </a>
-            <a href="https://github.com/javers/javers/issues">
+            <a href="http://github.com/javers/javers#guidelines-for-bug-reporting">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-bug"></span>
