--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                     <ul id="github-contributors" class="list-unstyled"></ul>
 
                 <h2>Team Board</h2>
-                   See on our <a href="https://waffle.io/javers/javers">Kanban Board</a>
-                   what are working on
+                   Check out our <a href="https://waffle.io/javers/javers">Kanban Board</a>
+                   to see what we’re working on
             </div>
             <div class="col-md-4">
                 <br/>
