--- a/javadoc_1.6/org/javers/core/metamodel/object/CdoSnapshot.html
+++ b/javadoc_1.6/org/javers/core/metamodel/object/CdoSnapshot.html
@@ -401,7 +401,7 @@ extends <a href="../../../../../org/javers/core/metamodel/object/Cdo.html" title
  have version 0.
  <br/>
  If it isn't OK for you, run manual DB update.
- See <a href="http://javers.org/release-notes/release-notes">release-notes</a>
+ See <a href="http://javers.org/documentation/features/#release-notes">release-notes</a>
  for v. 1.4.4</div>
 <dl>
 <dt><span class="simpleTagLabel">Since:</span></dt>
