--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
             </a>
 
             <a href="http://stackoverflow.com/questions/tagged/javers?sort=newest">
-                <div class="social col-md-4 col-sm-6">
+                <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-stack-overflow"></span>
                     </div>
@@ -148,6 +148,14 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                         <span class="icon fa fa-comments"></span>
                     </div>
                     <h2>Chat with us at<br><span>Gitter</span></h2>
+                </div>
+            </a>
+            <a href="http://javers.org/donate/">
+                <div class="social col-md-2 col-sm-6">
+                    <div class="icon-container">
+                        <span class="icon fa fa-money"></span>
+                    </div>
+                    <h2>Donate with<br><span>PayPal</span></h2>
                 </div>
             </a>
         </div>
