--- a/index.html
+++ b/index.html
@@ -171,9 +171,21 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                 <h2>Contributors</h2>
                     <ul id="github-contributors" class="list-unstyled"></ul>
 
-                <h2>Team Board</h2>
-                   Check out our <a href="https://waffle.io/javers/javers">Kanban Board</a>
-                   to see what we’re working on
+                <h2>Our supporters</h2>
+
+                <h3><img src="/img/IDEADEV.png" height="65px"/></h3>
+                We use <a href="https://www.jetbrains.com/idea/">IntelliJ IDEA</a>,
+                the best IDE for Java.
+                Jet Brains supports open source community by
+                providing <a href="https://www.jetbrains.com/buy/opensource/">free licence</a> for non-commercial open source projects.
+
+                <h3><img src="https://www.yourkit.com/images/yklogo.png"/></h3>
+                YourKit supports open source projects with its full-featured Java Profiler.
+                YourKit, LLC is the creator of <a href="https://www.yourkit.com/java/profiler/">YourKit Java Profiler</a>
+                , innovative and intelligent tool for profiling Java applications.
+
+
+
             </div>
             <div class="col-md-4">
                 <br/>
