--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
     </div>
 </section>
 
-<section class="dark">
+<section>
     <div class="container">
         <div class="row">
             <div id="team" class="col-md-8">
