--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                 Commit changes performed on your domain objects
             </div>
             <div class="feature col-md-4 col-sm-6">
-                <a href="/documentation/spring-integration/#auto-audit-aspect">
+                <a href="/documentation/repository-examples/#read-snapshots-history">
                     <div class="icon-container">
-                        <span class="icon fa fa-at"></span>
+                        <span class="icon octicon octicon-mirror"></span>
                     </div>
-                    <h2>Auto-audit annotations</h2>
+                    <h2>Three views</h2>
                 </a>
-                Take advantage of the auto-audit annotation for Spring Data Repositories
+                Browse data history in three views &mdash; <br/>
+                <a href="/documentation/jql-examples/#query-for-changes">Changes</a>,
+                <a href="/documentation/jql-examples/#query-for-shadows">Shadows</a> and
+                <a href="/documentation/jql-examples/#query-for-snapshots">Snapshots</a>
             </div>
             <div class="feature col-md-4 col-sm-6">
                 <a href="/documentation/repository-configuration/">
@@ -79,15 +82,13 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
         </div>
         <div class="row">
             <div class="feature col-md-6 col-sm-6">
-                <a href="/documentation/repository-examples/#read-snapshots-history">
+                <a href="/documentation/spring-integration/#auto-audit-aspect">
                     <div class="icon-container">
-                        <span class="icon octicon octicon-mirror"></span>
+                        <span class="icon fa fa-at"></span>
                     </div>
-                    <h2>Two views</h2>
+                    <h2>Auto-audit annotations</h2>
                 </a>
-                Browse data change history in two views &mdash;
-                <a href="/documentation/repository-examples/#read-changes-history">diffs</a> and
-                <a href="/documentation/repository-examples/#read-snapshots-history">snapshots</a>
+                Take advantage of the auto-audit annotation for Spring Data Repositories
             </div>
             <div class="feature col-md-6 col-sm-6">
                 <a href="documentation/getting-started/">
