--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                 </div>
             </a>
 
-            <a href="http://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar">
+            <a href="https://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-cloud-download"></span>
@@ -174,13 +174,13 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
 
                 <h2>Our supporters</h2>
 
-                <h3><img src="/img/IDEADEV.png" height="65px"/></h3>
+                <h3><img alt="IntelliJ IDEA" src="/img/IDEADEV.png" style="height: 65px"/></h3>
                 We use <a href="https://www.jetbrains.com/idea/">IntelliJ IDEA</a>,
                 the best IDE for Java.
                 Jet Brains supports open source community by
                 providing <a href="https://www.jetbrains.com/buy/opensource/">free licence</a> for non-commercial open source projects.
 
-                <h3><img src="https://www.yourkit.com/images/yklogo.png"/></h3>
+                <h3><img alt="YourKit" src="https://www.yourkit.com/images/yklogo.png"/></h3>
                 YourKit supports open source projects with its full-featured Java Profiler.
                 YourKit, LLC is the creator of <a href="https://www.yourkit.com/java/profiler/">YourKit Java Profiler</a>
                 , innovative and intelligent tool for profiling Java applications.
