--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ description: Witth JaVers you can forget about troublesome data versioning. Let 
                 </div>
             </a>
 
-            <a href="https://search.maven.org/#artifactdetails|org.javers|javers-core|{{site.javers_current_version}}|jar">
+            <a href="https://search.maven.org/#artifactdetails%7Corg.javers%7Cjavers-core%7C{{site.javers_current_version}}%7Cjar">
                 <div class="social col-md-2 col-sm-6">
                     <div class="icon-container">
                         <span class="icon fa fa-cloud-download"></span>
